--- a/src/components/LoginPage/Login/InstallApp/index.module.scss
+++ b/src/components/LoginPage/Login/InstallApp/index.module.scss
@@ -10,6 +10,7 @@
         display: flex;
         max-width: 350px;
         width: 100%;
+        height: 153px;
         justify-content: space-between;
         margin-top: 20px;
 
