--- a/src/components/share/UserComment/index.module.scss
+++ b/src/components/share/UserComment/index.module.scss
@@ -1,11 +1,21 @@
 .userComment {
-    margin-top: 4px;
+    margin-top: 8px;
     font-family: 'Montserrat', sans-serif;
     word-wrap: break-word;
     font-size: 13px;
-        .username {
+        .link {
             margin-right: 5px;
             color: #262626;
-            font-weight: 600;
-        }
+            font-weight: 600; 
+            text-decoration: none;
+            outline: none;
+            &:active,  &:visited ,  &:focus  {
+                text-decoration: none;
+                outline: none;
+                border: 0;
+            }
+            &:active {
+            opacity: 0.7;
+            }
+}
 }
