--- a/src/components/ProfilePage/AccountPublication/PhotoGallery/index.module.scss
+++ b/src/components/ProfilePage/AccountPublication/PhotoGallery/index.module.scss
@@ -113,3 +113,10 @@
       margin-top: 3px;
     }
   }
+
+  .spinner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
