--- a/src/components/Main/List/Card/index.module.scss
+++ b/src/components/Main/List/Card/index.module.scss
@@ -8,8 +8,21 @@
   .other {
     display: flex;
     flex-direction: column;
-    padding: 8px 16px;
   }
+}
+
+.actions,
+.userRate,
+.comments {
+ padding: 0px 16px;
+}
+
+.comments {
+  padding-bottom: 10px;
+}
+
+.actions {
+  padding-top: 8px;
 }
 
 .userTitle {
