--- a/src/components/share/AddComment/index.module.scss
+++ b/src/components/share/AddComment/index.module.scss
@@ -1,9 +1,34 @@
+.addComment {
+  display: flex;
+  padding: 16px;
+  border-top: 1px solid #efefef;
+}
+
 .commentArea {
   font-family: "Montserrat", sans-serif;
-  font-size: 13px;
-  display: block;
-  width: 100%;
-  border: 0;
-  outline: none;
-  height: 40px;
+    font-size: 13px;
+    background: 0 0;
+    width: 75%;
+    border: 0;
+    color: #262626;
+    height: 18px;
+    max-height: 80px;
+    outline: 0;
+    padding: 0;
+    resize: none;
+}
+
+.buttonAdd {
+  flex-grow: 1;
+  font-size: 14px;
+  line-height: 18px;
+  background: transparent;
+    border: 0;
+    font-weight: 600;
+    color: #3897f0;
+    display: inline;
+    padding: 0;
+    &:disabled {
+      opacity: 0.3;
+    }
 }
