--- a/src/components/Modal/index.module.scss
+++ b/src/components/Modal/index.module.scss
@@ -1,5 +1,6 @@
 .modal {
-    width: 75%;
+    width: 100%;
+    max-width: 800px;
     position: fixed;
     z-index: 500;
     left: 50%;
@@ -12,7 +13,6 @@
 @media screen and (max-width: 700px) {
     .modal {
         width: 100%;
-        scrollbar-width: none;
         height: calc(100% - 60px);
         overflow-y: scroll;
     }
