--- a/src/components/share/AddComment/index.module.scss
+++ b/src/components/share/AddComment/index.module.scss
@@ -5,6 +5,7 @@
 }
 
 .commentArea {
+  overflow: hidden;
   font-family: "Montserrat", sans-serif;
     font-size: 13px;
     background: 0 0;
@@ -20,7 +21,7 @@
 
 .buttonAdd {
   flex-grow: 1;
-  font-size: 14px;
+  font-size: 13px;
   line-height: 18px;
   background: transparent;
     border: 0;
@@ -31,4 +32,19 @@
     &:disabled {
       opacity: 0.3;
     }
+     &:active {
+             opacity: 0.6;
+         }
+}
+
+@media screen and (min-width: 800px) {
+  .commentArea::placeholder {
+    font-size: 12px;
+  }
+}
+
+@media screen and (max-width: 360px) {
+  .commentArea::placeholder {
+    font-size: 11px;
+  }
 }
