--- a/src/components/Header/index.module.scss
+++ b/src/components/Header/index.module.scss
@@ -10,7 +10,6 @@
     padding: 0px 20px;
     left: 0;
     text-align: center;
-    line-height: 75px;
     background: #fff;
     border-bottom: 1px solid #dbdbdb;
     transition: all 0.4s ease-in-out;
@@ -39,7 +38,7 @@
         border-radius: 4px;
         width: 199px;
         height: 22px;
-        padding-left: 20px;
+        padding: 0px 20px;
         &::placeholder {
             color: #999;
             text-align: center;
@@ -54,6 +53,85 @@
 }
 
 .link {
+    text-decoration: none;
+    outline: none;
+    &:active,  &:visited ,  &:focus  {
+        text-decoration: none;
+        outline: none;
+        border: 0;
+    }
+    &:active {
+       opacity: 0.7;
+    }
+}
+
+.inputFlex {
+    display: flex;
+    align-items: center;
+}
+
+.spinner {
+    margin-left: -28px;
+}
+
+.liveSearch {
+    position: relative;
+}
+
+.wrapper {
+    top: 40px;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+    width: 250px;
+}
+
+.filtredUsers {
+    width: 100%;
+    max-height: 300px;
+    overflow-y: scroll;
+    background: #fff;
+    border: solid 1px #e6e6e6;
+}
+
+
+.wrapper {
+ &::before {
+        content: "";
+        display: block;
+        height: 15px;
+        width: 15px;
+        border: solid 1px #e6e6e6;
+        background: #fff;
+        position: absolute;
+        left: 50%;
+        transform: translate(-50%) rotate(46deg);
+        top: -9px;
+        z-index: -1;
+    }
+    &::after {
+        content: "";
+        display: block;
+        height: 1px;
+        width: 22px;
+        background: #fff;
+        position: absolute;
+        left: 50%;
+        transform: translate(-50%);
+        top: -0px;
+    }
+}
+   
+.error {
+    font-family: 'Montserrat', sans-serif;
+    padding: 15px;
+    text-align: center;
+    color: #999;
+    font-size: 12px;
+}
+
+.foundUserLink {
+    display: block;
     text-decoration: none;
     outline: none;
     &:active,  &:visited ,  &:focus  {
