--- a/src/components/LoginPage/Login/InstallApp/index.module.scss
+++ b/src/components/LoginPage/Login/InstallApp/index.module.scss
@@ -10,15 +10,17 @@
         display: flex;
         max-width: 350px;
         width: 100%;
-        height: 153px;
         justify-content: space-between;
         margin-top: 20px;
 
+        div {
+            flex-basis: 50%;
+            padding: 10px;
+        }
+
         img {
             display: block;
-            width: 48%;
-            flex-shrink: 1;
-            cursor: pointer;
+            width: 100%;
         }
     }
 }
